created a div with class container

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 </head>
 <body>
     <div class="container">
-        <h3>Akan names</h3>
+        <h2>Akan names</h2>
+        <h3>Find Your Akan Name</h3>
         <div class="row">
             <div class="col-md-7">
                 <form>
