--- a/index.html
+++ b/index.html
@@ -1,22 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="/css/bootstrap-grid.min.css">
+    <link rel="stylesheet" href="/css/bootstrap.min.css">
     <link rel="stylesheet" href="/css/styles.css">
     <title>Akan Names</title>
 </head>
+
 <body>
+    <div class="jumbotron">
+        <h2>Find your Akan Name</h2>
+    </div>
     <div class="container">
         <h2>Akan names</h2>
-        <h3>Find Your Akan Name</h3>
         <div class="row">
             <div class="col-md-7">
                 <form>
                     <div>
-                        <label for="century" class="form-control" id="century" placeholder="Enter century of birth"></label>
+                        <label for="century" class="form-control" id="century"
+                            placeholder="Enter century of birth"></label>
                     </div>
                     <div class="form-group">
                         <label for="Year">Year</label>
@@ -24,11 +29,13 @@
                     </div>
                     <div class="form-group">
                         <label for="month">Month</label>
-                        <input type="number" class="form-control" id="month" placeholder="Enter here" min="1" max="12" required>
+                        <input type="number" class="form-control" id="month" placeholder="Enter here" min="1" max="12"
+                            required>
                     </div>
                     <div class="form-group">
                         <label for="Year">Date</label>
-                        <input type="text" class="form-control" id="date" placeholder="Enter here" min="1" max="31" required>
+                        <input type="text" class="form-control" id="date" placeholder="Enter here" min="1" max="31"
+                            required>
                     </div>
                     <div class="form-group form-check">
                         <input type="radio" name="one" class="form-check-input" value="" id="gender">
@@ -43,10 +50,12 @@
                     <input type="reset">
                 </form>
             </div>
-                            <p id="result"></p>
-                        </div>
-            </div>
+            <p id="result"></p>
         </div>
-    </div>    
+    </div>
+    </div>
+    </div>
 </body>
+<script src="script.js"></script>
+
 </html>
