--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="jumbotron">
-        <h1>THE AKAN NAME GENERATOR:</h1>
+        <h1><em>THE AKAN NAME GENERATOR:</em></h1>
         <h3>Find Your Akan Name Here:</h3>
     </div>
     <div class="container mycard">
