--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="jumbotron">
         <h1><em>THE AKAN NAME GENERATOR:</em></h1>
-        <h3><em>Find Your Akan Name Here:</em></h3>
+        <h3><em><strong>Find tour Akan name</strong></em></h3>
     </div>
     <div class="container mycard">
         <h2 class="card-title text-center howit">
