--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="css/styles.css">
     <title>Akan Naming system</title>
 </head>
 <body>
@@ -136,5 +136,5 @@
             class="btn btn-outline-primary">Reset</button>
     </div>
 </body>
-<script src="example.js"></script>
+<script src="script.js"></script>
 </html>
