--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <div class="col-md-4">
                 <div class="card m-4">
                     <div class="cardx">
-                        <p>Date</p>
+                        <p><em>Date</em></p>
                     </div>
                     <div class="card-body">
                         <h4 class="card-title">Enter Date Of Birth</h4>
