--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 <input type="text" class="form-control" id="year" placeholder="Enter the year">
             </div>
             <div class="form-group">
-                <label for="Month">Month of birth</label>
+                <label for="Month"><strong>Month of birth</strong></label>
                 <select class="form-control" id="month">
                     <option>1</option>
                     <option>2</option>
