--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                 </select>
             </div>
             <div class="form-group">
-                <label for="Date"><em>>Date Of Birth</em></label>
+                <label for="Date"><em>Date Of Birth</em></label>
                 <select class="form-control" id="day">
                     <option>1</option>
                     <option>2</option>
