--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                         <p>Month</p>
                     </div>
                     <div class="card-body">
-                        <h4 class="card-title">Enter Month Of Birt</h4>
+                        <h4 class="card-title">Enter Month Of Bir</h4>
                         <p class="card-text">
                             Enter The month you were born so as to generate your akan
                         </p>
