--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <div class="container">
         <form>
             <div class="form-group " onsubmit="event.preventDefault()">
-                <label for="Year">Year Of Birth</label>
+                <label for="Year"><strong>Date Of Birth</strong></label>
                 <input type="text" class="form-control" id="year" placeholder="Enter the year">
             </div>
             <div class="form-group">
