--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                         <p>Year</p>
                     </div>
                     <div class="card-body">
-                        <h4 class="card-title">nter Year Of Birth</h4>
+                        <h4 class="card-title">Enter Year Of Birth</h4>
                         <p class="card-text">
                             Enter The year you were born so as to generate your akan
                         </p>
