--- a/index.html
+++ b/index.html
@@ -136,5 +136,5 @@
             class="btn btn-outline-primary">Reset</button>
     </div>
 </body>
-<script src="example.js"></script>
+<script src="script.js.js"></script>
 </html>
