added a live link

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                         <p><em>Date</em></p>
                     </div>
                     <div class="card-body">
-                        <h4 class="card-title">Enter Date Of Birth</h4>
+                        <h4 class="card-title"><strong> Date Of Birth</strong></h4>
                         <p class="card-text">
                             Enter The date you were born so as to generate your akan
                         </p>
