--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                         <p>Year</p>
                     </div>
                     <div class="card-body">
-                        <h4 class="card-title">Enter Year Of Birth</h4>
+                        <h4 class="card-title" >Enter Year Of Birth</h4>
                         <p class="card-text">
                             Enter The year you were born so as to generate your akan
                         </p>
@@ -64,7 +64,7 @@
         <form>
             <div class="form-group " onsubmit="event.preventDefault()">
                 <label for="Year"><strong>Date Of Birth</strong></label>
-                <input type="text" class="form-control" id="year" placeholder="Enter the year">
+                <input type="text" class="form-control" id="year" maxlength="4" placeholder="Enter the year">
             </div>
             <div class="form-group">
                 <label for="Month"><strong>Month of birth</strong></label>
